<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

    <!-- Main/Titles -->
    <string name="app_name" translatable="false">Alexandria</string>
    <string name="title_activity_details" translatable="true">Details</string>
    <string name="title_fragment_settings" translatable="true">Settings</string>
    <string name="title_fragment_books" translatable="true">My Books</string>
    <string name="title_fragment_fetch" translatable="true">Find books</string>
    <string name="title_fragment_about" translatable="true">
        About <xliff:g id="app_name">%1$s</xliff:g>
    </string>

    <!-- Shared preferences keys -->
    <string name="sp_sync_status_key" translatable="false">SyncStatus</string>
    <string name="pref_startScreen_key" translatable="false">PreferredStartScreen</string>

    <!-- Preference stuff -->
    <string name="pref_startScreen" translatable="true">Select start screen</string>
    <string name="pref_startScreen_default" translatable="false">0</string>

    <!-- Action buttons -->
    <string name="action_settings" translatable="true">Settings</string>
    <string name="action_share" translatable="true">Share</string>
    <string name="action_add" translatable="true">Add to library</string>
    <string name="action_remove" translatable="true">Remove from library</string>
    <string name="action_update" translatable="true">Update in library</string>
    <string name="action_view_details" translatable="true">View details</string>
    <string name="action_view_browser" translatable="true">Open in Google Books</string>

    <!-- Navigation drawer -->
    <string name="navigation_drawer_open" translatable="true">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="true">Close navigation drawer</string>

    <!-- Barcode Scanner strings -->
    <string name="barcode_scanner_ok" translatable="true">OK</string>
    <string name="barcode_scanner_permission_camera_rationale" translatable="true">
        Access to the camera is needed for detection
    </string>
    <string name="barcode_scanner_no_camera_permission" translatable="true">
        This application cannot run because it does not have the camera permission.  The application
        will now exit.
    </string>
    <string name="barcode_scanner_low_storage_error" translatable="true">
        Face detector dependencies cannot be downloaded due to low device storage
    </string>

    <!-- Library interaction -->
    <string name="library_add_book" translatable="true">
        Added <xliff:g id="title">%1$s</xliff:g> to your library!
    </string>
    <string name="library_update_book" translatable="true">
        Updated <xliff:g id="title">%1$s</xliff:g> in your library.
    </string>
    <string name="library_delete_book" translatable="true">
        Deleted <xliff:g id="title">%1$s</xliff:g> from your library.
    </string>
    <string name="library_book_no_name" translatable="true">No title</string>
    <string name="library_book_no_author" translatable="true">Unknown author</string>

    <!-- Empty fetch recyclerview strings -->
    <string name="empty_fetch_books_null_query" translatable="true">Search for something!</string>
    <string name="empty_fetch_books_no_network" translatable="true">
        The network is not available. Try checking your internet connection before searching for
        books.
    </string>
    <string name="empty_fetch_books_server_down" translatable="true">
        No results found. The server is not returning data.
    </string>
    <string name="empty_fetch_books_server_invalid" translatable="true">
        The server is not returning valid data. Please check for an updated version of Books.
    </string>
    <string name="empty_fetch_books_volume_empty" translatable="true">No results found.</string>

    <!-- Empty view recyclerview strings -->
    <string name="empty_view_books" translatable="true">
        Your library is empty. Try adding some books!
    </string>
    <string name="empty_view_books_no_results" translatable="true">No results found.</string>

    <!-- Search strings -->
    <string name="list_input_hint" translatable="true">Search titles, authors, and ISBNs</string>

    <!-- Detail view -->
    <string name="detail_rating" translatable="false">
        (<xliff:g id="number">%1$s</xliff:g>)
    </string>
    <string name="detail_bibliographic_information" translatable="true">Bibliographic info</string>
    <string name="detail_label_title" translatable="true">Title</string>
    <string name="detail_label_subtitle" translatable="true">Subtitle</string>
    <string name="detail_label_authors" translatable="true">Author</string>
    <string name="detail_label_print" translatable="true">Edition</string>
    <string name="detail_label_publisher" translatable="true">Publisher</string>
    <string name="detail_label_date" translatable="true">Date</string>
    <string name="detail_label_isbn" translatable="false">ISBN</string>
    <string name="detail_label_length" translatable="true">Length</string>
    <string name="detail_label_categories" translatable="true">Subject</string>
    <string name="detail_label_language" translatable="true">Language</string>

    <!-- Share - A must read book: Harry Potter and the Sorcerer's Stone by J.K. Rowling -->
    <string name="share_book" translatable="true">
        A must read book: <xliff:g id="title">%1$s</xliff:g> by <xliff:g id="author">%2$s</xliff:g>
         (view in Google Books: <xliff:g id="url">%3$s</xliff:g>)
    </string>

    <!-- Strings for xml tools -->
    <string name="tools_book_title">Fullmetal Alchemist</string>
    <string name="tools_book_subtitle">The boy who lived</string>
    <string name="tools_book_title_subtitle">Fullmetal Alchemist\nThe boy who lived</string>
    <string name="tools_book_author">Hiromu Arakawa</string>
    <string name="tools_book_author_date">Hiromu Arakawa, 2000</string>
    <string name="tools_book_publisher">The Learning Company</string>
    <string name="tools_book_date">March 23, 2000</string>
    <string name="tools_book_isbn10">0744016314</string>
    <string name="tools_book_isbn13">9780744016314</string>
    <string name="tools_book_isbns">0744016314, 9780744016314</string>
    <string name="tools_book_length">309 pages</string>
    <string name="tools_book_printType">Book</string>
    <string name="tools_book_maturity">Everyone</string>
    <string name="tools_book_language">English</string>
    <string name="tools_book_description">
        This book is intended for presenting the basic concepts of Finite Element Analysis applied
        to several engineering applications. Salient Features: 1. Covers several modules of
        elasticity, heat conduction, eigenvalue and fluid flow analysis which are necessary for a
        student of Mechanical Engineering. 2. Finite Element formulations have been presented using
        both global and natural coordinates. It is important for providing smooth transition form
        formulation in global coordinates to natural coordinates. 3. Special focus has been given to
        heat conduction problems and fluid flows which are not sufficiently discussed in other
        textbooks. 4. Important factors affecting the formulation have been included as
        Miscellaneous Topics. 5. Several examples have been worked out in order to highlight the
        applications of Finite Element Analysis. New to this Edition Apart from moderately revising
        the whole text three new chapters \"Dynamic Analysis\", \"Non-linear Analysis\", \"Bending
        of Thin Plates\", three appendices and short questions and answers have been added in the
        present edition to make it more useful.
    </string>
    <string name="tools_book_description_short">
        Breaking the laws of nature is a serious crime! Reads R to L (Japanese Style), for audiences
         T As Greed and King Bradley continue their battle, the mysterious homunculus "father" makes
         his move under Central City. In order to achieve his objectives, he will need&#8230;
    </string>
    <string name="tools_book_pageCount">364pp</string>
    <string name="tools_book_ratingsCount">(140)</string>
    <string name="tools_book_ratingsAverage">3.4</string>
    <string name="tools_book_categories">Drama, Non fiction</string>
    <string name="tools_drawer_title">Find books</string>
    <string name="tools_drawer_subtitle">Search for books online!</string>

    <!-- Misc -->
    <string name="list_and" translatable="true">and&#160;</string>
    <string name="list_duple" translatable="true"><xliff:g id="first">%1$s</xliff:g> and <xliff:g id="second">%2$s</xliff:g></string>

    <string name="about_text" translatable="true">
        Alexandria was originally created by Sasch Jaschke and modified for the purposes of turning
        it into a productionizing assignment for students in the Udacity Android Nanodegree program.
        \n\nHeavily revised by Teddy Rodriguez, a student in the nanodegree program.
        \n\nAll book information and images gathered from the Google Books API.
        \n\n\nApp last updated Monday, January 11, 2016.
    </string>
</resources>
